# aonapi

./: LICENSE  pyproject.toml
aonapi/: aon_serializers.py  enums.py  indexer.py  main.py  models.py  settings.py  utils.py
aonapi/routes/: nethys_data.py
aonapi/templates/: index.html
